--- a/spectrum-web/.settings/org.eclipse.wst.common.component
+++ b/spectrum-web/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/java"/>
         <property name="context-root" value="spectrum-web"/>
         <property name="java-output-path" value="/spectrum-web/target/classes"/>
     </wb-module>
