--- a/spectrum-web/src/main/webapp/template/navbar.xhtml
+++ b/spectrum-web/src/main/webapp/template/navbar.xhtml
@@ -5,13 +5,16 @@
 	
 
 <!-- <div class="wrapper"> -->
-	<header>
+	<header style="background-color:#2196F3;">
 			<div class="container">
 				<div class="header-data">
 					<div class="logo">
 						<a href="index.html" title=""><img src="../resources/images/spectrum.png" alt="" /></a>
 					</div><!--logo end-->
-					<div class="search-bar">
+					<div class="search-bar" style="float: left;
+							width: 220px;
+							margin-top: 9px;
+							margin-left: 60px;">
 						<form>
 							<input type="text" name="search" placeholder="Search..." />
 							<button type="submit"><i class="la la-search"></i></button>
@@ -146,7 +149,8 @@
 					<div class="menu-btn">
 						<a href="#" title=""><i class="fa fa-bars"></i></a>
 					</div><!--menu-btn end-->
-					<div class="user-account">
+					<div class="user-account" style="border-left: 1px solid #2196F3;
+							border-right: 1px solid #2196F3;">
 						<div class="user-info">
 							<img src="../resources/images/resources/user.png" alt="" />
 							<a href="#" title="">John</a>
