--- a/spectrum-web/src/main/webapp/template/template.xhtml
+++ b/spectrum-web/src/main/webapp/template/template.xhtml
@@ -16,6 +16,27 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:outputStylesheet name="lib/slick/slick-theme.css" />
 <h:outputStylesheet name="css/style.css" />
 <h:outputStylesheet name="css/responsive.css" />
+
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/bootstrap/css/bootstrap.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="fonts/iconic/css/material-design-iconic-font.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/animate/animate.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/css-hamburgers/hamburgers.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/animsition/css/animsition.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/select2/select2.min.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="vendor/daterangepicker/daterangepicker.css"/>
+<!--===============================================================================================-->
+	<h:outputStylesheet name="css/util.css"/>
+	<h:outputStylesheet name="css/main.css"/>
+<!--===============================================================================================-->
 <h:outputScript name="js/jquery.min.js" />
 <h:outputScript name="js/popper.js" />
 <h:outputScript name="js/bootstrap.min.js" />
