--- a/spectrum-web/src/main/webapp/template/header.xhtml
+++ b/spectrum-web/src/main/webapp/template/header.xhtml
@@ -18,189 +18,50 @@ xmlns:ui="http://java.sun.com/jsf/facelets">
 					<nav>
 						<ul>
 							<li>
-								<a href="index.html" title="">
-									<span><img src="resources/images/icon1.png" alt=""> </img></span>
-									Home
-								</a>
-							</li>
-							<li>
-								<a href="companies.html" title="">
-									<span><img src="resources/images/icon2.png" alt="" > </img></span>
-									Companies
-								</a>
-							</li>
-							<li>
-								<a href="projects.html" title="">
-									<span><img src="resources/images/icon3.png" alt=""> </img></span>
-									Projects
-								</a>
-							</li>
-							<li>
-								<a href="profiles.html" title="">
-									<span><img src="resources/images/icon4.png" alt=""> </img></span>
-									Profiles
-								</a>
-								<ul>
-									<li><a href="user-profile.html" title="">User Profile</a></li>
-									<li><a href="my-profile-feed.html" title="">my-profile-feed</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="jobs.html" title="">
-									<span><img src="resources/images/icon5.png" alt="" ></img></span>
-									Jobs
-								</a>
-							</li>
-							<li>
-								<a href="#" title="" class="not-box-open">
-									<span><img src="resources/images/icon6.png" alt=""></img></span>
-									Messages
-								</a>
-								<div class="notification-box msg">
-									<div class="nt-title">
-										<h4>Setting</h4>
-										<a href="#" title="">Clear all</a>
+							<h:form>
+									<div class="nav nav-tabs" id="nav-tab" role="tablist">
+									
+									<h:commandLink action="/home?faces-redirect=true" value="Home" >
+											<span><img src="resources/images/icon1.png" alt=""> </img></span>
+										
+											</h:commandLink>
 									</div>
-									<div class="nott-list">
-										<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img1.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="messages.html" title="">Jassica William</a> </h3>
-							  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img2.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
-							  					<p>Lorem ipsum dolor sit amet.</p>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img3.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
-							  					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempo incididunt ut labore et dolore magna aliqua.</p>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="view-all-nots">
-						  					<a href="messages.html" title="">View All Messsages</a>
-						  				</div>
-									</div><!--nott-list end-->
-								</div><!--notification-box end-->
+									</h:form>
+								
 							</li>
 							<li>
-								<a href="#" title="" class="not-box-open">
-									<span><img src="resources/images/icon7.png" alt=""></img></span>
-									Notification
-								</a>
-								<div class="notification-box">
-									<div class="nt-title">
-										<h4>Setting</h4>
-										<a href="#" title="">Clear all</a>
+							<h:form>
+									<div class="nav nav-tabs" id="nav-tab" role="tablist">
+									
+									<h:commandLink action="/top5Entreprises?faces-redirect=true" value="Companies" >
+											<span><img src="resources/images/icon2.png" alt=""> </img></span>
+										
+											</h:commandLink>
 									</div>
-									<div class="nott-list">
-										<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img1.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img2.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img3.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="notfication-details">
-							  				<div class="noty-user-img">
-							  					<img src="resources/images/resources/ny-img2.png" alt=""></img>
-							  				</div>
-							  				<div class="notification-info">
-							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
-							  					<span>2 min ago</span>
-							  				</div><!--notification-info -->
-						  				</div>
-						  				<div class="view-all-nots">
-						  					<a href="#" title="">View All Notification</a>
-						  				</div>
-									</div><!--nott-list end-->
-								</div><!--notification-box end-->
+									</h:form>
+								
 							</li>
+							
+							<li>
+							<h:form>
+									<div class="nav nav-tabs" id="nav-tab" role="tablist">
+									
+									<h:commandLink action="/mesStats?faces-redirect=true" value="my Dashboard" >
+											<span><img src="resources/images/icon3.png" alt=""> </img></span>
+										
+											</h:commandLink>
+									</div>
+									</h:form>
+								
+							</li>
+							
+							
+							
+
 						</ul>
 					</nav><!--nav end-->
-					<div class="menu-btn">
-						<a href="#" title=""><i class="fa fa-bars"></i></a>
-					</div><!--menu-btn end-->
-					<div class="user-account">
-						<div class="user-info">
-							<img src="resources/images/resources/user.png" alt=""></img>
-							<a href="#" title="">John</a>
-							<i class="la la-sort-down"></i>
-						</div>
-						<div class="user-account-settingss">
-							<h3>Online Status</h3>
-							<ul class="on-off-status">
-								<li>
-									<div class="fgt-sec">
-										<input type="radio" name="cc" id="c5" />
-										<label for="c5">
-											<span></span>
-										</label>
-										<small>Online</small>
-									</div>
-								</li>
-								<li>
-									<div class="fgt-sec">
-										<input type="radio" name="cc" id="c6" />
-										<label for="c6">
-											<span></span>
-										</label>
-										<small>Offline</small>
-									</div>
-								</li>
-							</ul>
-							<h3>Custom Status</h3>
-							<div class="search_form">
-								<form>
-									<input type="text" name="search" />
-									<button type="submit">Ok</button>
-								</form>
-							</div><!--search_form end-->
-							<h3>Setting</h3>
-							<ul class="us-links">
-								<li><a href="profile-account-setting.html" title="">Account Setting</a></li>
-								<li><a href="#" title="">Privacy</a></li>
-								<li><a href="#" title="">Faqs</a></li>
-								<li><a href="#" title="">Terms and Conditions</a></li>
-							</ul>
-							<h3 class="tc"><a href="#" title="">Logout</a></h3>
-						</div><!--user-account-settingss end-->
-					</div>
+					
+
 				</div><!--header-data end-->
 			</div>
 		</header><!--header end-->	
