--- a/spectrum-web/src/main/webapp/template/template.xhtml
+++ b/spectrum-web/src/main/webapp/template/template.xhtml
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" type="text/css" href="../resources/css/util.css" />
 	<link rel="stylesheet" type="text/css" href="../resources/css/jquery.range.css" />
 	<link rel="stylesheet" type="text/css" href="../resources/css/flatpickr.min.css" />
+	<script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script language="javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
 	<ui:insert name="title">
 	
 	</ui:insert>
