--- a/spectrum-web/src/main/webapp/template/navbar.xhtml
+++ b/spectrum-web/src/main/webapp/template/navbar.xhtml
@@ -15,10 +15,10 @@
 							width: 220px;
 							margin-top: 9px;
 							margin-left: 60px;">
-						<form>
+						<div>
 							<input type="text" name="search" placeholder="Search..." />
 							<button type="submit"><i class="la la-search"></i></button>
-						</form>
+						</div>
 					</div><!--search-bar end-->
 					<nav>
 						<ul>
@@ -34,8 +34,8 @@
 									Profiles
 								</a>
 								<ul>
-									<li><a href="user-profile.html" title="">User Profile</a></li>
-									<li><a href="my-profile-feed.html" title="">my-profile-feed</a></li>
+									<li><a href="Coach.xhtml" title="">User Profile</a></li>
+									<li><a href="my-profile-feed.xhtml" title="">my-profile-feed</a></li>
 								</ul>
 							</li>
 							<li>
@@ -179,20 +179,20 @@
 								</li>
 							</ul>
 							<h3>Custom Status</h3>
-							<div class="search_form">
-								<form>
+							<div class="search_div">
+								<div>
 									<input type="text" name="search" />
 									<button type="submit">Ok</button>
-								</form>
-							</div><!--search_form end-->
+								</div>
+							</div><!--search_div end-->
 							<h3>Setting</h3>
 							<ul class="us-links">
-								<li><a href="profile-account-setting.html" title="">Account Setting</a></li>
+								<li><a href="profile-account-setting.xhtml" title="">Account Setting</a></li>
 								<li><a href="#" title="">Privacy</a></li>
 								<li><a href="#" title="">Faqs</a></li>
 								<li><a href="#" title="">Terms &amp; Conditions</a></li>
 							</ul>
-							<h3 class="tc"><a href="#" title="">Logout</a></h3>
+							<h3 class="tc"><a href="login2.xhtml" title="">Logout</a></h3>
 						</div><!--user-account-settingss end-->
 					</div>
 				</div>
