--- a/spectrum-web/src/main/webapp/template/navbar.xhtml
+++ b/spectrum-web/src/main/webapp/template/navbar.xhtml
@@ -5,18 +5,15 @@
 	
 
 <!-- <div class="wrapper"> -->
-	<header style="background-color:#2196F3;">
+	<header>
 			<div class="container">
 				<div class="header-data">
 					<div class="logo">
-						<a href="index.html" title=""><img src="../resources/images/spectrum.png" alt="" /></a>
+						<a href="index.html" title=""><img src="../resources/images/logo.png" alt=""/></a>
 					</div><!--logo end-->
-					<div class="search-bar" style="float: left;
-							width: 220px;
-							margin-top: 9px;
-							margin-left: 60px;">
+					<div class="search-bar">
 						<form>
-							<input type="text" name="search" placeholder="Search..." />
+							<input type="text" name="search" placeholder="Search..."/>
 							<button type="submit"><i class="la la-search"></i></button>
 						</form>
 					</div><!--search-bar end-->
@@ -24,13 +21,25 @@
 						<ul>
 							<li>
 								<a href="index.html" title="">
-									<span><img src="../resources/images/icon1.png" alt="" /></span>
+									<span><img src="../resources/images/icon1.png" alt=""/></span>
 									Home
 								</a>
 							</li>
 							<li>
+								<a href="companies.html" title="">
+									<span><img src="../resources/images/icon2.png" alt=""/></span>
+									Companies
+								</a>
+							</li>
+							<li>
+								<a href="projects.html" title="">
+									<span><img src="../resources/images/icon3.png" alt=""/></span>
+									Projects
+								</a>
+							</li>
+							<li>
 								<a href="profiles.html" title="">
-									<span><img src="../resources/images/icon4.png" alt="" /></span>
+									<span><img src="../resources/images/icon4.png" alt=""/></span>
 									Profiles
 								</a>
 								<ul>
@@ -40,13 +49,13 @@
 							</li>
 							<li>
 								<a href="jobs.html" title="">
-									<span><img src="../resources/images/icon5.png" alt="" /></span>
+									<span><img src="../resources/images/icon5.png" alt=""/></span>
 									Jobs
 								</a>
 							</li>
 							<li>
 								<a href="#" title="" class="not-box-open">
-									<span><img src="../resources/images/icon6.png" alt="" /></span>
+									<span><img src="../resources/images/icon6.png" alt=""/></span>
 									Messages
 								</a>
 								<div class="notification-box msg">
@@ -57,7 +66,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img1.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img1.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a> </h3>
@@ -67,7 +76,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img2.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
@@ -77,7 +86,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img3.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img3.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="messages.html" title="">Jassica William</a></h3>
@@ -93,7 +102,7 @@
 							</li>
 							<li>
 								<a href="#" title="" class="not-box-open">
-									<span><img src="../resources/images/icon7.png" alt="" /></span>
+									<span><img src="../resources/images/icon7.png" alt=""/></span>
 									Notification
 								</a>
 								<div class="notification-box">
@@ -104,7 +113,7 @@
 									<div class="nott-list">
 										<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img1.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img1.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -113,7 +122,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img2.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -122,7 +131,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img3.png" alt="" />
+							  					<img src="../resources/images/resources/ny-img3.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -131,7 +140,7 @@
 						  				</div>
 						  				<div class="notfication-details">
 							  				<div class="noty-user-img">
-							  					<img src="../resources/images/resources/ny-img2.png" alt="" />
+							  					<img src="..resources/images/resources/ny-img2.png" alt=""/>
 							  				</div>
 							  				<div class="notification-info">
 							  					<h3><a href="#" title="">Jassica William</a> Comment on your project.</h3>
@@ -149,10 +158,9 @@
 					<div class="menu-btn">
 						<a href="#" title=""><i class="fa fa-bars"></i></a>
 					</div><!--menu-btn end-->
-					<div class="user-account" style="border-left: 1px solid #2196F3;
-							border-right: 1px solid #2196F3;">
+					<div class="user-account">
 						<div class="user-info">
-							<img src="../resources/images/resources/user.png" alt="" />
+							<img src="../resources/images/resources/user.png" alt=""/>
 							<a href="#" title="">John</a>
 							<i class="la la-sort-down"></i>
 						</div>
@@ -161,7 +169,7 @@
 							<ul class="on-off-status">
 								<li>
 									<div class="fgt-sec">
-										<input type="radio" name="cc" id="c5" />
+										<input type="radio" name="cc" id="c5"/>
 										<label for="c5">
 											<span></span>
 										</label>
@@ -170,7 +178,7 @@
 								</li>
 								<li>
 									<div class="fgt-sec">
-										<input type="radio" name="cc" id="c6" />
+										<input type="radio" name="cc" id="c6"/>
 										<label for="c6">
 											<span></span>
 										</label>
@@ -181,7 +189,7 @@
 							<h3>Custom Status</h3>
 							<div class="search_form">
 								<form>
-									<input type="text" name="search" />
+									<input type="text" name="search"/>
 									<button type="submit">Ok</button>
 								</form>
 							</div><!--search_form end-->
@@ -190,12 +198,12 @@
 								<li><a href="profile-account-setting.html" title="">Account Setting</a></li>
 								<li><a href="#" title="">Privacy</a></li>
 								<li><a href="#" title="">Faqs</a></li>
-								<li><a href="#" title="">Terms &amp; Conditions</a></li>
+								<li><a href="#" title="">Terms and Conditions</a></li>
 							</ul>
 							<h3 class="tc"><a href="#" title="">Logout</a></h3>
 						</div><!--user-account-settingss end-->
 					</div>
-				</div>
+				</div><!--header-data end-->
 			</div>
-		</header>
+		</header><!--header end-->
 </ui:composition>
