--- a/spectrum-web/src/main/webapp/template/navbar.xhtml
+++ b/spectrum-web/src/main/webapp/template/navbar.xhtml
@@ -39,7 +39,9 @@
 								</ul>
 							</li>
 							<li>
-								<a href="jobs.html" title="">
+							
+							
+								<a href="/template/ListGrudCandidate.xhtml" title="">
 									<span><img src="../resources/images/icon5.png" alt="" /></span>
 									Jobs
 								</a>
