--- a/spectrum-ear/.settings/org.eclipse.wst.common.component
+++ b/spectrum-ear/.settings/org.eclipse.wst.common.component
@@ -8,6 +8,9 @@
         <dependent-module archiveName="spectrum-ejb.jar" deploy-path="/" handle="module:/resource/spectrum-ejb/spectrum-ejb">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="jfoenix.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/com/jfoenix/jfoenix/1.4.0/jfoenix-1.4.0.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="javax.mail-api.jar" deploy-path="/" handle="module:/classpath/var/M2_REPO/javax/mail/javax.mail-api/1.5.2/javax.mail-api-1.5.2.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
