--- a/spectrum-web/src/main/webapp/template/templateVerifPass.xhtml
+++ b/spectrum-web/src/main/webapp/template/templateVerifPass.xhtml
@@ -22,7 +22,7 @@
 		<div class="container-login100" style=" background: #2196F3;">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
-					<h:graphicImage value="/resources/images/img-01.png" />
+					<h:graphicImage value="/resources/images/s.png" />
 				</div>
 
 				<form class="login100-form validate-form">
