--- a/spectrum-web/src/main/webapp/template/template.xhtml
+++ b/spectrum-web/src/main/webapp/template/template.xhtml
@@ -27,7 +27,7 @@
 </h:head>
 
 <body>
-	<ui:include src="/template/navbar.xhtml" />
+	<!-- <ui:include src="/template/navbar.xhtml" /> -->
 	<ui:insert name="content">
 		
 	</ui:insert>
