--- a/spectrum-web/src/main/webapp/template/templateLogin.xhtml
+++ b/spectrum-web/src/main/webapp/template/templateLogin.xhtml
@@ -19,10 +19,10 @@
 <body>
 	
 	<div class="limiter">
-		<div class="container-login100" style=" background: #2196F3;">
+		<div class="container-login100" style=" background: #e44d3a;">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
-					<h:graphicImage value="/resources/images/img-01.png" />
+					<h:graphicImage value="resources/images1/img-01.png" />
 				</div>
 
 				<form class="login100-form validate-form">
@@ -45,7 +45,7 @@
 					</div>
 
 				<div class="text-center p-t-136">
-						<a class="txt2" href="#">
+						<a class="txt2" href="Register.jsf">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
