--- a/spectrum-web/src/main/webapp/template/templateProfile.xhtml
+++ b/spectrum-web/src/main/webapp/template/templateProfile.xhtml
@@ -51,7 +51,7 @@
 						<div class="col-lg-3 col-md-4 col-sm-6 col-12">
 							<div class="company_profile_info">
 								<div class="company-up-info">
-									<img src="images/resources/pf-icon1.png" alt=""/>
+									<img src="images/pf-icon1.png" alt=""/>
 									<h3>John Doe</h3>
 									<h4>Graphic Designer</h4>
 									<ul>
