--- a/spectrum-web/src/main/webapp/template/templateRegister.xhtml
+++ b/spectrum-web/src/main/webapp/template/templateRegister.xhtml
@@ -19,34 +19,31 @@
 <body>
 	
 	<div class="limiter">
-		<div class="container-login100" style=" background: #2196F3;">
+		<div class="container-login100" style=" background: #e44d3a;">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
-					<h:graphicImage value="/resources/images/img-01.png" />
+					<h:graphicImage value="resources/images1/img-01.png" />
 				</div>
 
 				<form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Create your Account
+						Spectrum Registration
 					</span>
 <ui:insert name="content">
                 [Content goes here]
             </ui:insert>
-            
-				
-
-					<div class="text-center p-t-12">
+					<!--  <div class="text-center p-t-12">
 						<span class="txt1">
-							Forgot
+							Already
 						</span>
 						<a class="txt2" href="#">
-							Username / Password?
+							an account ?
 						</a>
-					</div>
+					</div> -->
 
 				<div class="text-center p-t-136">
-						<a class="txt2" href="#">
-							Create your Account
+						<a class="txt2" href="login.jsf">
+							Already an account ?
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
